public enum TypePouvoir {
    ALLIE,
    TOUTCAMP,
    ENNEMI,
    TOUS,
    RESISTANCE,
    FERVEUR_GUERRIERE,
    PEUR,
    SOIN_TOTAL,
    SOIN_SIMPLE,
    KAMIKAZE,
    AFFINITE_ETHER,
    AFFINITE_PLOMB

}
